2009-12-11  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: We should only try to set
	  TemplateBindings for ContentControl properties if the owner
	  is actually a ContentControl.

2009-12-09  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs:
	* ItemContainerGenerator.cs: Give a basic implementation of
	  ItemsContainerGenerator to support the NFL site.

2009-12-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaElement.cs: Stub out LicenseAcquirer.

2009-12-07  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (MakeVisible): Made virtual.

	* Control.cs (OnLostMouseCapture): Added.
	(OnMouseWheel): Removed from the #if NET_3_0 block. This is now
	always built since Silverlight 3.0 has this.

2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* SelectionMode.cs: Added to the build.

2009-12-02  Alan McGovern  <amcgovern@novell.com>

	* VirtualizingPanel.cs:
	* VirtualizingStackPanel.cs: Add some debug spew to make it
	  obvious that these UIElements don't work. 

2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ItemsControl.cs: Use the safe variant of set_parent.

2009-11-25  Alan McGovern  <amcgovern@novell.com>

	* TextBox.cs:
	* Control.cs:
	* PasswordBox.cs: Keep the usage of the Initialize method
	  consistent - add @CallInitialise to the native type if
	  Initialize is required instead of making it virtual and
	  overriding it.

2009-11-23  Alan McGovern  <amcgovern@novell.com>

	* ItemsPresenter.cs: Change ItemsPresenter to use the
	  TemplateOwner property to find its owning control rather
	  than walking the visual tree, which can break if the
	  template it expanded from contains another ItemsControl.

	* ItemsControl.cs: DOs which are expanded from a
	  ControlTemplate need to keep track of the
	  'templateBindingSource' so that we can attach new
	  TemplateBindings later. This value is stored in addition to
	  'IsTemplateItem' as DOs can be expanded from templates which