@@ -1,3 +1,8 @@
+2009-12-14  Jeffrey Stedfast  <fejj@novell.com>
+
+	* TextBox.cs: Fixed metadata.
+	(ArrangeOverride): Removed.
+
 2009-12-11  Alan McGovern  <amcgovern@novell.com>
 
 	* ContentPresenter.cs: We should only try to set
